--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.2",
+    "@syncfusion/ej2-react-calendars": "^19.4.52",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "chart.js": "^3.7.1",
+    "dayjs": "^1.10.7",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
+    "react-id-generator": "^3.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "save": "^2.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
